--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -12,7 +12,7 @@
 
   <main>
     <div class="jumbotron">
-      <h1>Welcome to Sightings R'Us</h1>
+      <h1>Welcome to UFO Sightings R'Us</h1>
       <p class="lead">If it ain't here, it ain't exist</p>
     </div>
 
@@ -58,7 +58,9 @@
           <% sightingsArr.forEach((el, index)=> { %>
             <tr>
               <td>
-                <a href="/sighting/<%= index %>"><%= el.date_time %></a>
+                <a href="/sighting/<%= index %>">
+                  <%= el.date_time %>
+                </a>
               </td>
               <td>
                 <%= el.shape %>
@@ -69,7 +71,11 @@
               <td>
                 <%= el.state %>
               </td>
-              <td>delete</td>
+              <td>
+                <form action="/sighting/delete/<%= index %>?_method=DELETE" method="POST">
+                  <input type="submit" value="Delete" />
+                </form>
+              </td>
             </tr>
             <% }) %>
         </table>
