--- a/views/template/nav.ejs
+++ b/views/template/nav.ejs
@@ -1,11 +1,11 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-light bg-light">
   <a class="navbar-brand" href="/">UFO Sightings</a>
   <ul class="navbar-nav mr-auto">
     <li class="nav-item">
       <a class="nav-link" href="/">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="/about">About</a>
+      <a class="nav-link" href="/sighting">Submit New Sighting!</a>
     </li>
   </ul>
 </nav>
