--- a/views/pages/full_sighting.ejs
+++ b/views/pages/full_sighting.ejs
@@ -38,7 +38,9 @@
           </tr>
         </table>
         <h4>Full Text:</h4>
-        <p class="text-justify"><%= thisSighting.text %></p>
+        <p class="text-justify">
+          <%= thisSighting.text %>
+        </p>
       </div>
   </main>
 
