--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -53,7 +53,7 @@
             <th class="d-none d-sm-table-cell">Shape</th>
             <th class="d-none d-sm-table-cell">City</th>
             <th>State</th>
-            <th id="delete-heading">Delete</th>
+            <th id="delete-heading">Delete/ Edit</th>
           </tr>
           <% sightingsArr.forEach((el, index)=> { %>
             <tr>
@@ -74,6 +74,9 @@
               <td>
                 <form action="/sighting/delete/<%= index %>?_method=DELETE" method="POST">
                   <input type="submit" value="Delete" />
+                </form>
+                <form action="/sighting/edit/<%= index %>" method="GET">
+                  <input type="submit" value="Edit" />
                 </form>
               </td>
             </tr>
