basic funcs up and running

--- a/views/pages/full_sighting.ejs
+++ b/views/pages/full_sighting.ejs
@@ -41,6 +41,7 @@
         <p class="text-justify">
           <%= thisSighting.text %>
         </p>
+        <a href="/sighting/edit/<%= thisSighting.index%>" class="btn btn-success btn-block">Click Here to Edit Sighting</a>
       </div>
   </main>
 
