--- a/views/pages/edit.ejs
+++ b/views/pages/edit.ejs
@@ -49,11 +49,11 @@
               <td colspan="5"><strong>Full Text</strong></td>
             </tr>
             <tr>
-              <td colspan="5"><textarea class="form-control col-lg-4" id="text" name="text" ><%= thisSighting.text %></textarea>
+              <td colspan="5"><textarea class="form-control col-lg-4" id="text" name="text" rows=10><%= thisSighting.text %></textarea>
               </td>
             </tr>
           </table>
-          <input type="submit" value="Submit" />
+          <input class="btn btn-success btn-block" type="submit" value="Submit Edit" />
         </form>
       </div>
   </main>
