--- a/views/template/head.ejs
+++ b/views/template/head.ejs
@@ -6,4 +6,4 @@
   href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
 />
 
-<link rel="stylesheet" href="./styles.css" />
+<link rel="stylesheet" type="text/css" href="/public/styles.css" />
