--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -16,29 +16,6 @@
       <p class="lead">If it ain't here, it ain't exist</p>
     </div>
 
-    <div id="center-content">
-
-      <form id="sort-section">
-
-        <select name="sighting" id="sort-options">
-          <option value="shape">
-            shape
-          </option>
-          <option value="city">
-            city
-          </option>
-          <option value="state">
-            state
-          </option>
-          <option value="date_time">
-            Date/ Time
-          </option>
-        </select>
-        <button class="btn btn-outline-secondary btn-sm" input type="submit" id="sort-button">Sort</button>
-      </form>
-
-    </div>
-
 
     </div>
     <div class="container-fluid" id="sighting-content">
@@ -48,13 +25,13 @@
 
           <tr class="bg-success">
             <th>Date/ Time</th>
-            <th class="d-none d-sm-table-cell">Shape</th>
-            <th class="d-none d-sm-table-cell">City</th>
-            <th>State</th>
+            <th><a href="/sort/shape">Shape</a></th>
+            <th><a href="/sort/city">City</a></th>
+            <th><a href="/sort/state">State</a></th>
             <th id="delete-heading">Delete</th>
           </tr>
-          <% sightingsArr.forEach((el, index)=> { %>
-            <tr class="clickable" onclick="window.location='/sighting/<%= index %>'">
+          <% sightingsArr.forEach((el)=> { %>
+            <tr class="clickable" onclick="window.location='/sighting/<%= el.index %>'">
               <td>
                 <%= el.date_time %>
               </td>
@@ -68,7 +45,7 @@
                 <%= el.state %>
               </td>
               <td>
-                <form action="/sighting/delete/<%= index %>?_method=DELETE" method="POST">
+                <form action="/sighting/delete/<%= el.index %>?_method=DELETE" method="POST">
                   <input class="btn btn-danger btn-sm" type="submit" value="Delete" />
                 </form>
               </td>
