--- a/views/pages/submit_form.ejs
+++ b/views/pages/submit_form.ejs
@@ -26,30 +26,34 @@
             </tr>
             <tr>
               <td>
-                <input class="form-control" type="datetime-local" id="date_time" name="date_time" />
+                <input class="form-control" type="datetime-local" id="date_time" name="date_time" required />
               </td>
               <td>
-                <input class="form-control" type="text" id="shape" name="shape" />
+                <input class="form-control" type="text" id="shape" name="shape" placeholder="Shape seen" required />
               </td>
               <td>
-                <input class="form-control" type="text" id="city" name="city" />
+                <input class="form-control" type="text" id="city" name="city" placeholder="City sighted" required />
               </td>
               <td>
-                <input class="form-control" type="text" id="state" name="state" />
+                <input class="form-control" type="text" id="state" name="state" pattern="[A-Za-z]{2}"
+                  title="Two letter state code" placeholder="Enter a 2 letter state code" required />
               </td>
-              <td><input class="form-control" type="text" id="duration" name="duration" /></td>
+              <td><input class="form-control" type="text" id="duration" name="duration" placeholder="Sighting duration"
+                  required /></td>
             </tr>
             <tr>
               <td colspan="5"><strong>Summary</strong></td>
             </tr>
             <tr>
-              <td colspan="5"><input class="form-control col-lg-4" type="text" id="summary" name="summary" /></td>
+              <td colspan="5"><input class="form-control col-lg-4" type="text" id="summary" name="summary"
+                  placeholder="Enter a one line summary" /></td>
             </tr>
             <tr>
               <td colspan="5"><strong>Full Text</strong></td>
             </tr>
             <tr>
-              <td colspan="5"><textarea class="form-control col-lg-4" id="text" name="text" rows=10></textarea>
+              <td colspan="5"><textarea class="form-control col-lg-4" id="text" name="text" rows=10
+                  placeholder="Enter as much details as possible" required></textarea>
               </td>
             </tr>
           </table>
